# bevy_independent_transform

./: Cargo.toml  README.md
examples/: sprites.rs  text.rs
src/: bundles.rs  lib.rs
